--- a/functions/emailFormats/TeacherInitialEmail.html
+++ b/functions/emailFormats/TeacherInitialEmail.html
@@ -377,7 +377,7 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 5px; padding-bottom: 0px; font-family: Arial, sans-serif"><![endif]-->
 <div style="color:#2BBBB2;font-family:Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height:120%;padding-top:5px;padding-right:10px;padding-bottom:0px;padding-left:10px;">
 <div style="line-height: 14px; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 12px; color: #2BBBB2;">
-<p style="line-height: 45px; font-size: 12px; margin: 0;"><span style="font-size: 38px;"><strong>Welcome to Slip</strong>mate</span></p>
+<p style="line-height: 45px; font-size: 12px; margin: 0;"><span style="font-size: 38px;">Welcome to <strong>Slip</strong>mate, your new teaching assistant</span></p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
